2022-XX-YY v. 2.1.3
--------------------
- Fixed clicking to the right of checkboxes wrong behaviour (issue #203)
- Escape description text before showing as package information (issue #191)

2021-10-24 v. 2.1.2
---------------------
- Fixed wrong access to manatools.service module (issue #202)
- Fixed issue #189 "No line break to fit the width of the window in dnfdragora"

2021-01-06 v. 2.1.1
---------------------
- Updated translations
- Fix issue #172 `show only new packages` triggers dnfdragora crash
- Fix issue #168 for loading icons
- Managed line feed into descriptions see https://bugs.mageia.org/show_bug.cgi?id=27274
- Added an user preference to consider upgrades as updates (issue #163)

2020-09-06 v. 2.1.0
---------------------
- Test if createMenuBar is available and create new menubar, fallback old menu buttons
- Fixed issue #158 uncategorized packages were not shown as updates with groups view
- Fixed a crash when notify2.show is invoked, removed notify2 and use pstray.notify instead
- Fixed a crash when a search is performed and select all is pressed
- Hide menu dnfdragora-update if no updates present (experimental and configurable default 
  False since it does not work in every DEs) 
- Fixed dnfdragora logging settings
- Fixed dnfdragora view when all_updates is True into settings (system configuration file)
- Fixed dnfdragora view when --update-only is passed as option
- dnfdragora-update: hide menu when running dnfdragora (experimental)
- dnfdragora-update: used a different icon to show that updates are present
- Added a message to dnfdragora-update if user force a check for updates
- Added Restore default push button to set chosen options to default values 
- Added new Otions dialog
- Added Help dialog
- Fixed loop in case of GPG key missing if OnGPGImport is not received
- Removed MenuButtons and added MenuBar and new menus
- Cleaning info text if got empty result searching