@@ -1,5 +1,8 @@
 2022-XX-YY v. 2.1.3
 --------------------
+- Added logging info if metadata have to be downloaded (expiration time)
+  Note that MetaData update_interval <= 0 means disabling check as well as
+  if dnf-makecache.timer is enabled
 - Fixed clicking to the right of checkboxes wrong behaviour (issue #203)
 - Escape description text before showing as package information (issue #191)
 
